--- a/UbudKusCoin/UbudKusCoin.csproj
+++ b/UbudKusCoin/UbudKusCoin.csproj
@@ -3,345 +3,35 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
-
   <PropertyGroup Condition=" '$(RunConfiguration)' == 'UbudKusCoin' ">
     <ExternalConsole>true</ExternalConsole>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="LiteDB" Version="5.0.10" />
-
-    <!-- grpc support -->
     <PackageReference Include="Grpc.Tools" Version="2.35.0">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Grpc.AspNetCore" Version="2.34.0" />
     <PackageReference Include="Grpc.AspNetCore.Web" Version="2.34.0" />
-    <!-- end -->
-
-    <PackageReference Include="Coravel" Version="4.0.2" />
     <PackageReference Include="starkbank-ecdsa" Version="1.2.1" />
     <PackageReference Include="Microsoft.Extensions.Hosting.Systemd" Version="5.0.1" />
+    <PackageReference Include="LibP2P.Peer" Version="1.1.0" />
+    <PackageReference Include="LibP2P.Crypto" Version="1.1.0" />
+    <PackageReference Include="NetCoreServer" Version="5.0.13" />
   </ItemGroup>
-
   <ItemGroup>
     <Protobuf Include="Grpc\Protos\bchain.proto" GrpcServices="Server" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Sceduler\" />
+    <Protobuf Include="Grpc\Protos\version.proto" GrpcServices="Server" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
-    <None Include="**/*" />
+    <Folder Include="Config\" />
+    <Folder Include="P2P\" />
+    <Folder Include="obj\Debug\net5.0\Grpc\Protos\" />
+    <Folder Include="DB\" />
+  </ItemGroup>
+  <ItemGroup>
     <None Include="**/*" />
   </ItemGroup>
 </Project>
